--- a/age-count/style.css
+++ b/age-count/style.css
@@ -6,7 +6,7 @@
      height: 100vh;
  }
  main {
-     height: 150px;
+     height: 300px;
      width: 200px;
      display: flex;
      justify-content:center;
@@ -15,22 +15,22 @@
      gap: 0.2rem;
  }
  .box {
-     height: 100%;
-     width: 100%;
+     height: 300%;
+     width: 300%;
      display: flex;
      justify-content: center;
      align-items: center;
  }
  .inner-box{
      background-color: black;
-     height: 50px;
-     width: 90%;
+     height: 200px;
+     width: 300px;
      border-radius: 5px;
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 1rem;
-     box-shadow: 0 0 3px 0.6px rgb(39,12,12);
+     box-shadow: 0 0 3px 0.6px rgb(193, 119, 119);
  }
  .date{
      border: none;
