--- a/word-count/style.css
+++ b/word-count/style.css
@@ -5,12 +5,15 @@
     padding: 0;
 }
 html{
+   font-size: 63.5%;
+
+}
+body{
     background-color: beige;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-
 }
 main
 {
@@ -21,6 +24,7 @@ main
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     box-shadow: 0 0 20px 5px rgb(62,37,98);
 
 }
@@ -42,10 +46,24 @@ main
     background-color: blueviolet;
     color: aliceblue;
     position: absolute;
+
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
+    height: 40px;
+    width: 180px;
+    transform:translateY(100px);
+    gap: 1rem;
+
+
+}
+.box{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 1.6rem;
+    transform: translateY(-5px);
 
 }
 .box::before{
